--- a/Carrot_cumin_burger.html
+++ b/Carrot_cumin_burger.html
@@ -14,8 +14,8 @@
 </ul>
 
 <ol>
-  <li>Drain the kidney beans and rinse in cold water to wash away the ‘tinned’ taste. Put into a saucepan and cover with cold water. Bring to the boil, then simmer for 10 minutes to really soften.<li>
-  <li>Put the onion, carrot, and cumin into a medium frying pan. Add the splash of oil and cook on a low heat to soften. When the kidney beans have softened, drain well and add to the carrots and onion. Remove from the heat and mash together until you have a smoothish puree, like a mashed potato consistency. Stir in the flour to stiffen.<li>
+  <li>Drain the kidney beans and rinse in cold water to wash away the ‘tinned’ taste. Put into a saucepan and cover with cold water. Bring to the boil, then simmer for 10 minutes to really soften.</li>
+  <li>Put the onion, carrot, and cumin into a medium frying pan. Add the splash of oil and cook on a low heat to soften. When the kidney beans have softened, drain well and add to the carrots and onion. Remove from the heat and mash together until you have a smoothish puree, like a mashed potato consistency. Stir in the flour to stiffen.</li>
   <li>Heat the remaining oil in the frying pan on a medium heat. With floured hands, take a quarter of the burger mixture and roll it into a ball. Make three more balls with the remaining mixture. Place one in the oil and flatten gently with a fork to make the burger shape. Depending on the size of your pan, you may be able to cook all the burgers at once or need to do them in batches – unless you’re freezing some of the uncooked patties. Cook for a few minutes on one side, before turning. The burgers need to be handled with care as they can be quite fragile before they’re done! When cooked and slightly crisp on both sides, remove from the pan and serve.</li>
 </ol>
 
