--- a/Mushroom_mac_and_cheese.html
+++ b/Mushroom_mac_and_cheese.html
@@ -21,4 +21,7 @@
   <li>First peel and finely chop your onion and sling it in a saucepan with a slug of oil.</li>
   <li>Cook on a gentle heat for a few minutes to soften, season with salt, and sprinkle in the flour. Mix briskly so that the flour coats the onions.</li>
   <li>Add a liberal splash of milk and beat well to form an oniony paste. It doesn’t look all that at the moment, but don’t worry, it’s going to get better. Add another splash of milk, and another, keeping it moving so it doesn’t catch and burn, nor go stiff and sticky. Stiff and sticky certainly have their uses, but neither of them are needed in this particular scenario. Repeat until all the milk is used up; it will be quite runny at this point, but it will firm up in the oven later.</li>
+  <li>Finely slice your mushrooms, or break them up by hand – I’ll be honest, I like to just smash them between my thumbs, especially at the end of a stressful day. Try it, you might like it. However you choose to dismember them, add them to the pot and stir through. Add your cheese (or cheese equivalent), dollop in the mustard, crank the heat up, and stir through until melted.</li>
+  <li>Remove the pan from the heat, and fold in the pasta. (Folding in is a cookery term that basically means ‘gently stir it without mooshing it about too much’.)</li>
+  <li>Tip it into an ovenproof dish, making sure the pasta is pretty much covered in the sauce, add more cheese on top, and optional breadcrumbs if you like that kind of thing, and pop it in the oven at 180C for 45 minutes.</li>
 </ol>
