--- a/html/homepage.html
+++ b/html/homepage.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
-<img src="/Images/banana waffles image.jpg">
-<img src="/Images/barley-broccoli-risotto image.jpg">
-<img src="/Images/Carrot_cumin_burger..jpg">
-<img src="/Images/Green tortilla image.png">
-<img src="/Images/katsu_burge_image.jpg">
-<img src="/Images/kiev_image.jpg">
-<img src="/Images/mushroom_mac_and_cheese.jpg">
-<img src="/Images/orzo_image.jpg">
-<img src="/Images/Toad_in_the_hole.jpg">
+<img src="../Images/banana waffles image.jpg">
+<img src="../Images/barley-broccoli-risotto image.jpg">
+<img src="../Images/Carrot_cumin_burger..jpg">
+<img src="../Images/Green tortilla image.png">
+<img src="../Images/katsu_burge_image.jpg">
+<img src="../Images/kiev_image.jpg">
+<img src="../Images/mushroom_mac_and_cheese.jpg">
+<img src="../Images/orzo_image.jpg">
+<img src="../Images/Toad_in_the_hole.jpg">
 </html>
