--- a/html/homepage.html
+++ b/html/homepage.html
@@ -1,12 +1,30 @@
 <!DOCTYPE html>
 <html>
-<img src="../Images/banana waffles image.jpg">
-<img src="../Images/barley-broccoli-risotto image.jpg">
-<img src="../Images/Carrot_cumin_burger..jpg">
-<img src="../Images/Green tortilla image.png">
-<img src="../Images/katsu_burge_image.jpg">
-<img src="../Images/kiev_image.jpg">
-<img src="../Images/mushroom_mac_and_cheese.jpg">
-<img src="../Images/orzo_image.jpg">
+<a href="banana_waffles.html">
+  <img src="../Images/banana waffles image.jpg">
+</a>
+<a href="Barley_and_broccoli.html">
+  <img src="../Images/barley-broccoli-risotto image.jpg">
+</a>
+<a href="Carrot_cumin_burger.html">
+  <img src="../Images/Carrot_cumin_burger..jpg">
+</a>
+<a href="green_tortilla.HTML"
+  <img src="../Images/Green tortilla image.png">
+</a>
+<a href="Chicken Katsu Burger.html">
+  <img src="../Images/katsu_burge_image.jpg">
+</a>
+<a href="Chicken Kiev.html">
+  <img src="../Images/kiev_image.jpg">
+</a>
+<a href="Mushroom_mac_and_cheese.html">
+  <img src="../Images/mushroom_mac_and_cheese.jpg">
+</a>
+<a href="Butternut Squash Orzo.html">
+  <img src="../Images/orzo_image.jpg">
+</a>
+<a href="Toad_in_the_hole.html">
 <img src="../Images/Toad_in_the_hole.jpg">
+</a>
 </html>
