--- a/html/homepage.html
+++ b/html/homepage.html
@@ -10,7 +10,7 @@
   <img src="../Images/Carrot_cumin_burger..jpg">
 </a>
 <a href="green_tortilla.HTML"
-  <img src="../Images/Green tortilla image.png">
+  <img src="../Images/green tortilla image.png">
 </a>
 <a href="Chicken Katsu Burger.html">
   <img src="../Images/katsu_burge_image.jpg">
