--- a/html/homepage.html
+++ b/html/homepage.html
@@ -1,30 +1,62 @@
 <!DOCTYPE html>
 <html>
-<a href="banana_waffles.html">
-  <img src="../Images/banana waffles image.jpg">
-</a>
-<a href="Barley_and_broccoli.html">
-  <img src="../Images/barley-broccoli-risotto image.jpg">
-</a>
-<a href="Carrot_cumin_burger.html">
-  <img src="../Images/Carrot_cumin_burger..jpg">
-</a>
-<a href="green_tortilla.HTML"
-  <img src="../Images/green tortilla image.png">
-</a>
-<a href="Chicken Katsu Burger.html">
-  <img src="../Images/katsu_burger_image.jpg">
-</a>
-<a href="Chicken Kiev.html">
-  <img src="../Images/kiev_image.jpg">
-</a>
-<a href="Mushroom_mac_and_cheese.html">
-  <img src="../Images/mushroom_mac_and_cheese.jpg">
-</a>
-<a href="Butternut Squash Orzo.html">
-  <img src="../Images/orzo_image.jpg">
-</a>
-<a href="Toad_in_the_hole.html">
-  <img src="../Images/Toad_in_the_hole.jpg">
-</a>
+<head>
+  <link href='../css/bootstrap.css' rel='stylesheet'>
+  <meta name="viewport" content="width"=device-width, initial-scale=1.0>
+</head>
+  <body>
+    <div class="container">
+      <div class="row">
+        <div class=col-xs-4>
+          <a href="banana_waffles.html">
+            <img src="../Images/banana waffles image.jpg" class="img-responsive">
+          </a>
+        </div>
+        <div class="col-xs-4">
+          <a href="Barley_and_broccoli.html">
+            <img src="../Images/barley-broccoli-risotto image.jpg" class="img-responsive">
+          </a>
+        </div>
+        <div class="col-xs-4">
+          <a href="Carrot_cumin_burger.html">
+            <img src="../Images/Carrot_cumin_burger..jpg" class="img-responsive">
+          </a>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-xs-4">
+          <a href="Chicken Kiev.html">
+            <img src="../Images/kiev_image.jpg" class="img-responsive" >
+          </a>
+        </div>
+        <div class="col-xs-4">
+          <a href="Mushroom_mac_and_cheese.html">
+            <img src="../Images/mushroom_mac_and_cheese.jpg" class="img-responsive">
+          </a>
+        </div>
+        <div class="col-xs-4">
+          <a href="Butternut Squash Orzo.html">
+            <img src="../Images/orzo_image.jpg" class="img-responsive">
+          </a>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-xs-4">
+          <a href="Toad_in_the_hole.html">
+            <img src="../Images/Toad_in_the_hole.jpg" class="img-responsive">
+          </a>
+        </div>
+        <div class="col-xs-4">
+          <a href="green_tortilla.HTML">
+            <img src="../Images/green tortilla image.png" class="img-responsive">
+          </a>
+        </div>
+        <div class="col-xs-4">
+          <a href="Chicken Katsu Burger.html">
+            <img src="../Images/katsu_burger_image.jpg" class="img-responsive">
+          </a>
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
