--- a/html/Carrot_cumin_burger.html
+++ b/html/Carrot_cumin_burger.html
@@ -20,3 +20,4 @@
 </ol>
 
 <p>Tip: Make the burger mixture in advance and pop into the fridge for a few hours – it firms up nicely and is less fragile when cooking. It will keep, covered, for 2 days so can be made well in advance.</p>
+<img src='../Images/Carrot_cumin_burger..jpg'>
