--- a/html/Mushroom_mac_and_cheese.html
+++ b/html/Mushroom_mac_and_cheese.html
@@ -25,3 +25,4 @@
   <li>Remove the pan from the heat, and fold in the pasta. (Folding in is a cookery term that basically means ‘gently stir it without mooshing it about too much’.)</li>
   <li>Tip it into an ovenproof dish, making sure the pasta is pretty much covered in the sauce, add more cheese on top, and optional breadcrumbs if you like that kind of thing, and pop it in the oven at 180C for 45 minutes.</li>
 </ol>
+<img src='../Images/mushroom_mac_and_cheese.jpg'>
