--- a/html/Toad_in_the_hole.html
+++ b/html/Toad_in_the_hole.html
@@ -18,3 +18,4 @@
   <li>Pour in the rest of the milk and continue to beat until very smooth.</li>
   <li>Remove the roasting tin from the oven and pour the batter in. Move the sausages so they are roughly evenly distributed. Bake for 40 minutes until the batter is risen and golden. DO NOT OPEN THE OVEN DOOR until the 40 minutes are over else your batter will deflate!</li>
 </ol>
+<img src='../Images/Toad_in_the_hole.jpg'>
