--- a/html/Butternut Sqush Orzo.html
+++ b/html/Butternut Sqush Orzo.html
@@ -2,14 +2,14 @@
 <html>
   <head>
         <title>Cooking For a  Group</title>
-
+        <link rel="stylesheet" type="text/css" href="../css/group-webproject.css">
   </head>
 
   <body>
 
 <h1>Butternut Squash Orzo</h1>
 
-<h2>Ingredients</h2>
+<h2>Ingredients:</h2>
 <ul>
  <li>Garlic</li>
  <li>Vegetable Stock</li>
