--- a/html/Carrot_cumin_burger.html
+++ b/html/Carrot_cumin_burger.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
 <html>
+<head>
+<title> Budget Recipies </title>
+</head>
 <h1>Carrot, Cumin & Kidney Bean Burgers</h1>
 
 <h2>Makes 4 generous burgers at 15p each or 6 good sized ones at 9p each</h2>
-
+<h3>Ingredients:</h3>
 <ul>
   <li>1 x 400g tin of kidney beans, 30p</li>
   <li>1 smallish onion (150g approx), peeled and finely chopped, 5p</li>
@@ -12,7 +15,7 @@
   <li>1 tbsp veg or sunflower oil, plus 2 tablespoons to fry the burgers, 6p</li>
   <li>1 heaped teaspoon flour, plus another to shape the burgers, 1p</li>
 </ul>
-
+<h2>Method:</h2>
 <ol>
   <li>Drain the kidney beans and rinse in cold water to wash away the ‘tinned’ taste. Put into a saucepan and cover with cold water. Bring to the boil, then simmer for 10 minutes to really soften.</li>
   <li>Put the onion, carrot, and cumin into a medium frying pan. Add the splash of oil and cook on a low heat to soften. When the kidney beans have softened, drain well and add to the carrots and onion. Remove from the heat and mash together until you have a smoothish puree, like a mashed potato consistency. Stir in the flour to stiffen.</li>
