--- a/html/Chicken Katsu Burger.html
+++ b/html/Chicken Katsu Burger.html
@@ -2,14 +2,13 @@
 <html>
   <head>
         <title>Cooking For a  Group</title>
-
   </head>
 
 <body>
 
   <h1>Chicken Katsu Burger</h1>
 
-<h2>Ingredients</h2>
+<h2>Ingredients:</h2>
 <ul>
  <li>6 Brioche Baps</li>
  <li>3 Eggs</li>
@@ -25,7 +24,7 @@
  <li>6 Skinless, Boneless Chicken Thighs</li>
 </ul>
 
-<h2>Method</h2>
+<h2>Method:</h2>
 <ol>
  <li>Katsu mayo time. Add 8 tablespoons of mayo to a bowl. Add ¾ of a veggie stock cube, a teaspoon of garam masala, 2 teaspoons of curry powder and a tablespoon of runny honey. Mix well and set aside.</li>
  <li>Zingy slaw. Grate your radishes and half a cabbage. Add to a bowl with 2 teaspoons of sesame oil, the juice of a lime and a large handful of chopped coriander. Mix everything together and set aside.</li>
