--- a/html/Chicken Kiev.html
+++ b/html/Chicken Kiev.html
@@ -2,14 +2,13 @@
 <html>
   <head>
         <title>Cooking For a  Group</title>
-
   </head>
 
 <body>
 
     <h1>Chicken Kiev and Bacon Mash</h1>
 
-    <h2>Ingredients</h2>
+    <h2>Ingredients:</h2>
     <ul>
      <li>6 Chicken Breasts</li>
      <li>180g Salted Butter</li>
@@ -21,7 +20,7 @@
      <li>2 Cloves Garlic</li>
     </ul>
 
-    <h2>Method</h2>
+    <h2>Method:</h2>
     <ol>
      <li>Add 150g Butter to a bowl, with a large handful of both chopped tarragon and parsley. Grate in 2 cloves of garlic. Season with salt and pepper. Mash together. Wrap your butter in cling film. Mould in to a cylinder shape, and then place in fridge for 30 minutes to firm up.</li>
      <li>Potato time. Chop up your bacon and add to a pan. Cook until crispy.</li>
