--- a/html/Mushroom_mac_and_cheese.html
+++ b/html/Mushroom_mac_and_cheese.html
@@ -1,9 +1,13 @@
 <!DOCTYPE html>
 <html>
+<head>
+<title> Healthy Recipies </title>
+</head>
 
 <h1>Mushroom Mac ‘n’ Cheese, 42p</h1>
 
 <h2>Serves three people, or two particularly hungry ones, at 42p each</h2>
+<h3>Ingredients:</h3>
 <ul>
   <li>1 onion, 9p (90p/1.5kg, Sainsburys)</li>
   <li>1 tbsp sunflower oil, 3p (£3/3l)</li>
@@ -17,6 +21,7 @@
   <li>15g hard strong cheese, 18p (£2.30/200g, Sainsburys Basics)</li>
   <li>A slice of bread, 2p (40p/22 slice loaf, Sainsburys Basics)</li>
 </ul>
+<h4>Method:</h4>
 <ol>
   <li>First peel and finely chop your onion and sling it in a saucepan with a slug of oil.</li>
   <li>Cook on a gentle heat for a few minutes to soften, season with salt, and sprinkle in the flour. Mix briskly so that the flour coats the onions.</li>
