--- a/html/Toad_in_the_hole.html
+++ b/html/Toad_in_the_hole.html
@@ -1,8 +1,15 @@
 <!DOCTYPE html>
 <html>
+
+<head>
+<link rel="stylesheet" type="text/css" href="../css/group-webproject.css">
+<title> Budget Recipies </title>
+</head>
+
 <h1>Toad In The Hole, 18p</h1>
 
 <h2>Serves 4-6 from 18p each.</h2>
+<h3>Ingredients:</h3>
 <ul>
   <li>25g butter or 2 tbsp cooking oil, 3p (£1.10/1l)</li>
   <li>400g sausages, 70p (£1.19/681g)</li>
@@ -11,6 +18,7 @@
   <li>1 egg, 15p (89p/6 free range)</li>
   <li>300ml milk, 17p (55p/1l)</li>
 </ul>
+<h4>Method</h4>
 <ol>
   <li>First grab a roasting dish, around 10 inches by 12 inches, or a deep round cake tin will do the same job.</li>
   <li>Pop the butter or oil, and sausages, into the tin. Cook at 200C for around 10 minutes, giving the tin a jostle halfway through to make sure they cook evenly.</li>
