--- a/html/Butternut Sqush Orzo.html
+++ b/html/Butternut Sqush Orzo.html
@@ -3,12 +3,16 @@
   <head>
         <title>Cooking For a  Group</title>
         <link rel="stylesheet" type="text/css" href="../css/group-webproject.css">
+<link href= '../css/bootstrap.css' rel='stylesheet'>
+<meta name='viewpoint'content="width"=device-width, initial-scale=1.0>
   </head>
 
   <body>
 
 <h1>Butternut Squash Orzo</h1>
-
+<div class= "container">
+<div class= "row">
+  <div class= col-xs-4>
 <h2>Ingredients:</h2>
 <ul>
  <li>Garlic</li>
@@ -19,19 +23,24 @@
  <li>Goat's Cheese</li>
  <li>2 Butternut Squash</li>
 </ul>
-
-<h2>Method</h2>
+</div>
+<div class= col-xs-8>
+<h2>Method:</h2>
 <ol>
  <li>Preheat oven to 180°C/356°F.</li>
  <li>Cut your butternut squash into cubes, and place in baking tray. Drizzle with olive oil and season with salt and pepper. Place in oven for 30 minutes or until soft.</li>
  <li>Remove squash when soft. Place 3/4 in a blender. Place remaining quarter back in oven until brown and caramelized.</li>
- <li>Into the blender, add a vegetable stock cube and a pint of water. Blitz. You want quite a loose purée consistency.</li>
- <li>Get a large frying pan on the heat. Add 1 clove of chopped garlic with a splash of olive oil. Once softened, pour in the squash purée. Mix it about, and then add your orzo.</li>
+ <li>Into the blender, add a vegetable stock cube and a pint of water. Blitz. You want quite a loose puree consistency.</li>
+ <li>Get a large frying pan on the heat. Add 1 clove of chopped garlic with a splash of olive oil. Once softened, pour in the squash puree. Mix it about, and then add your orzo.</li>
  <li>Keep beating the orzo about, and pouring in splashes of water until the orzo has cooked through and resembles a loose, oozy risotto. At this point, add your remaining squash, and a handful of chopped basil. Mix it all together and turn off the heat.</li>
  <li>Add large dollops of goat's cheese onto the orzo, sprinkle over some parmesan, scatter on the leftover basil leaves and serve with a last drizzle of olive oil! Enjoy!</li>
 </ol>
+<img src='../Images/orzo_image.jpg'>
+</div>
+</div>
+
+</div>
+</div>
 
 </body>
-
 </html>
-<img src='../Images/orzo_image.jpg'>
