--- a/html/homepage.html
+++ b/html/homepage.html
@@ -3,34 +3,21 @@
 <head>
   <link href='../css/bootstrap.css' rel='stylesheet'>
   <meta name="viewport" content="width"=device-width, initial-scale=1.0>
-  <div class="bs-example bs-navbar-top-example" data-example-id="navbar-fixed-to-top">
-    <nav class="navbar navbar-default navbar-fixed-top">
-      <div class="container-fluid">
-        <div class="navbar-header">
-          <button type="button" class="collapsed navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-6" aria-expanded="false">
-            <span class="sr-only">Toggle navigation</span> <span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span> </button>
-            <a href="../html/homepage.html" class="navbar-brand">Student Recipes</a>
-            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-               <ul class="nav navbar-nav">
-                 <li class="active"><a href="#">Link <span class="sr-only">(current)</span></a></li>
-                 <li><a href="#">Link</a></li>
-                 <li class="dropdown">
-                   <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
-                   <ul class="dropdown-menu">
-                     <li><a href="#">Action</a></li>
-                     <li><a href="#">Another action</a></li>
-                     <li><a href="#">Something else here</a></li>
-                     <li role="separator" class="divider"></li>
-                     <li><a href="#">Separated link</a></li>
-                     <li role="separator" class="divider"></li>
-                     <li><a href="#">One more separated link</a></li>
-                   </ul>
-                 </li>
-               </ul>
-          </div>
-       </nav>
-     </div>
-   </div>
+  <nav class="navbar navbar-default navbar-fixed-top">
+  <div class="container-fluid">
+    <div class="navbar-header">
+      <a class="navbar-brand" href="hompage.html">Student Recipies</a>
+    </div>
+    <ul class="nav navbar-nav">
+      <li class="active">
+      <li><a href="#">Healthy</a></li>
+      <li><a href="#">Budget</a></li>
+      <li><a href="#">Group Meals</a></li>
+      <li><a href="about us.html">About Us</a></li>
+    </ul>
+  </div>
+</nav>
+</nav>
 </head>
   <body>
     <div class="container">
