Added html files
Added recipe group pages

--- a/html/homepage.html
+++ b/html/homepage.html
@@ -10,8 +10,8 @@
     </div>
     <ul class="nav navbar-nav">
       <li class="active">
-      <li><a href="#">Healthy</a></li>
-      <li><a href="#">Budget</a></li>
+      <li><a href="healthy_recipes.html">Healthy</a></li>
+      <li><a href="budget_recipes.html">Budget</a></li>
       <li><a href="#">Group Meals</a></li>
       <li><a href="about us.html">About Us</a></li>
     </ul>
