--- a/html/homepage.html
+++ b/html/homepage.html
@@ -12,7 +12,7 @@
       <li class="active">
       <li><a href="healthy_recipes.html">Healthy</a></li>
       <li><a href="budget_recipes.html">Budget</a></li>
-      <li><a href="#">Group Meals</a></li>
+      <li><a href="group_recipes.html">Group Meals</a></li>
       <li><a href="about us.html">About Us</a></li>
     </ul>
   </div>
