--- a/html/about us.html
+++ b/html/about us.html
@@ -1,8 +1,12 @@
-<!doctype html>
+<!DOCTYPE html>
+<html>
+  <head>
+    <link rel="stylesheet" href="../css/aboutus.css"
+  </head>
 <header>
 <H1> About Us </h1>
 </header>
-<link href='../css/bootstrap.css'rel='stylesheet'>
+  <link href='../css/bootstrap.css'rel='stylesheet'>
 <body>
 <p> Hello, we are students from Newcastle who saw the need for a go to place for all things food.
 Together we've collated some of the best recipes for any occasion, budget or craving. Let us know below of any recipes suggestions
