--- a/html/homepage.html
+++ b/html/homepage.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <link href='../css/bootstrap.css' rel='stylesheet'>
+  <link href='../css/custom.css' rel='stylesheet'>
   <meta name="viewport" content="width"=device-width, initial-scale=1.0>
   <nav class="navbar navbar-default navbar-fixed-top">
   <div class="container-fluid">
@@ -15,6 +16,12 @@
       <li><a href="group_recipes.html">Group Meals</a></li>
       <li><a href="about us.html">About Us</a></li>
     </ul>
+    <form class="navbar-form navbar-right">
+     <div class="form-group">
+       <input type="text" class="form-control" placeholder="Search">
+     </div>
+     <button type="submit" class="btn btn-default">Submit</button>
+   </form>
   </div>
 </nav>
 </nav>
