Recipe pages bootsrap

--- a/html/Barley_and_broccoli.html
+++ b/html/Barley_and_broccoli.html
@@ -1,10 +1,15 @@
 <!DOCTYPE html>
 <head>
 <title> Healthy Recipies </title>
+<link rel="stylesheet" type="text/css" href="../css/group-webproject.css">
+<link href= '../css/bootstrap.css' rel='stylesheet'>
+<meta name='viewpoint'content="width"=device-width, initial-scale=1.0>
 </head>
 <body>
 <h1> Barley and Broccoli Risotto </h1>
-<p3>
+<div class= "container">
+<div class= "row">
+  <div class= col-xs-4>
   <ul>
 <h2> Ingredients:</h2>
 <li>100g wholegrain pearl barley</li>
@@ -16,6 +21,8 @@
 <li>generous squeeze of lemon juice</li>
 <li>125g Tenderstem broccoli</li>
 </ul>
+</div>
+<div class= col-xs-8>
 <h2> Method:</h2>
 <ol>
 </li>Pour a litre of cold water over the barley, cover and leave to soak overnight.
@@ -23,6 +30,26 @@
 </li>Meanwhile, add the garlic, basil, remaining oil, the lemon juice and 3 tbsp water to the leeks in the bowl, and blitz to a paste with a stick blender. </li>
 </li>When the barley has cooked for 20 mins, add the broccoli to the pan and cook for 5-10 mins more until both are tender. Stir in the basil purée, heat very briefly (to retain the fragrance), then spoon into bowls to serve.</li>
 </ol>
-</p2>
+
+</div>
+</div>
+
+</div>
+</div>
+
+<div class="container">
+  <div class= row>
+    <div class="col-xs-2">
+    </div>
+<div class="col-xs-8">
+  <a href="Butternut Squash Orzo.html">
+    <img src="../Images/barley-broccoli-risotto image.jpg" class="img-responsive">
+
+  </a>
+</div>
+<div class="col-xs-2">
+</div>
+</div>
+</div>
+
 </body>
-<img src='../Images/barley-broccoli-risotto image.jpg'>
