--- a/html/Butternut Sqush Orzo.html
+++ b/html/Butternut Sqush Orzo.html
@@ -35,10 +35,26 @@
  <li>Keep beating the orzo about, and pouring in splashes of water until the orzo has cooked through and resembles a loose, oozy risotto. At this point, add your remaining squash, and a handful of chopped basil. Mix it all together and turn off the heat.</li>
  <li>Add large dollops of goat's cheese onto the orzo, sprinkle over some parmesan, scatter on the leftover basil leaves and serve with a last drizzle of olive oil! Enjoy!</li>
 </ol>
-<img src='../Images/orzo_image.jpg'>
+
+
+
+</div>
+
 </div>
 </div>
 
+<div class="container">
+  <div class= row>
+    <div class="col-xs-2">
+    </div>
+<div class="col-xs-8">
+  <a href="Butternut Squash Orzo.html">
+    <img src="../Images/orzo_image.jpg" class="img-responsive">
+
+  </a>
+</div>
+<div class="col-xs-2">
+  </div
 </div>
 </div>
 
