--- a/html/Carrot_cumin_burger.html
+++ b/html/Carrot_cumin_burger.html
@@ -2,11 +2,19 @@
 <html>
 <head>
 <title> Budget Recipies </title>
+<link rel="stylesheet" type="text/css" href="../css/group-webproject.css">
+<link href= '../css/bootstrap.css' rel='stylesheet'>
+<meta name='viewpoint'content="width"=device-width, initial-scale=1.0>
 </head>
-<h1>Carrot, Cumin & Kidney Bean Burgers</h1>
 
-<h2>Makes 4 generous burgers at 15p each or 6 good sized ones at 9p each</h2>
-<h3>Ingredients:</h3>
+<body>
+
+<h1>Carrot, Cumin & Kidney Bean Burgers</h1>
+<div class= "container">
+<div class= "row">
+  <div class= col-xs-4>
+
+<h2>Ingredients:</h2>
 <ul>
   <li>1 x 400g tin of kidney beans, 30p</li>
   <li>1 smallish onion (150g approx), peeled and finely chopped, 5p</li>
@@ -15,6 +23,8 @@
   <li>1 tbsp veg or sunflower oil, plus 2 tablespoons to fry the burgers, 6p</li>
   <li>1 heaped teaspoon flour, plus another to shape the burgers, 1p</li>
 </ul>
+</div>
+<div class= col-xs-8>
 <h2>Method:</h2>
 <ol>
   <li>Drain the kidney beans and rinse in cold water to wash away the ‘tinned’ taste. Put into a saucepan and cover with cold water. Bring to the boil, then simmer for 10 minutes to really soften.</li>
@@ -22,5 +32,24 @@
   <li>Heat the remaining oil in the frying pan on a medium heat. With floured hands, take a quarter of the burger mixture and roll it into a ball. Make three more balls with the remaining mixture. Place one in the oil and flatten gently with a fork to make the burger shape. Depending on the size of your pan, you may be able to cook all the burgers at once or need to do them in batches – unless you’re freezing some of the uncooked patties. Cook for a few minutes on one side, before turning. The burgers need to be handled with care as they can be quite fragile before they’re done! When cooked and slightly crisp on both sides, remove from the pan and serve.</li>
 </ol>
 
-<p>Tip: Make the burger mixture in advance and pop into the fridge for a few hours – it firms up nicely and is less fragile when cooking. It will keep, covered, for 2 days so can be made well in advance.</p>
-<img src='../Images/Carrot_cumin_burger..jpg'>
+
+</div>
+</div>
+
+<div class="container">
+  <div class= row>
+    <div class="col-xs-2">
+    </div>
+<div class="col-xs-8">
+  <a href="Butternut Squash Orzo.html">
+    <img src="../Images/Carrot_cumin_burger..jpg" class="img-responsive">
+
+  </a>
+</div>
+<div class="col-xs-2">
+  </div
+</div>
+</div>
+
+</body>
+</html>
