--- a/html/Chicken Katsu Burger.html
+++ b/html/Chicken Katsu Burger.html
@@ -2,12 +2,17 @@
 <html>
   <head>
         <title>Cooking For a  Group</title>
+        <link rel="stylesheet" type="text/css" href="../css/group-webproject.css">
+<link href= '../css/bootstrap.css' rel='stylesheet'>
+<meta name='viewpoint'content="width"=device-width, initial-scale=1.0>
   </head>
 
 <body>
 
   <h1>Chicken Katsu Burger</h1>
-
+  <div class= "container">
+  <div class= "row">
+    <div class= col-xs-4>
 <h2>Ingredients:</h2>
 <ul>
  <li>6 Brioche Baps</li>
@@ -23,7 +28,8 @@
  <li>1 Vegetable Stock Cube</li>
  <li>6 Skinless, Boneless Chicken Thighs</li>
 </ul>
-
+</div>
+<div class= col-xs-8>
 <h2>Method:</h2>
 <ol>
  <li>Katsu mayo time. Add 8 tablespoons of mayo to a bowl. Add ¾ of a veggie stock cube, a teaspoon of garam masala, 2 teaspoons of curry powder and a tablespoon of runny honey. Mix well and set aside.</li>
@@ -34,7 +40,27 @@
  <li>Assembly time. Add a very large dollop of katsu mayo to your bun. Then add your chicken. Then add a large spoonful of the zingy slaw. Dollop some more katsu mayo on the top half of the bun, and place that on top of the burger. Take a bite and enjoy!</li>
 </ol>
 
+</div>
+</div>
+
+</div>
+</div>
+
+<div class="container">
+  <div class= row>
+    <div class="col-xs-2">
+    </div>
+<div class="col-xs-8">
+  <a href="Butternut Squash Orzo.html">
+    <img src='../Images/katsu_burger_image.jpg' class="img-responsive">
+
+  </a>
+</div>
+<div class="col-xs-2">
+</div>
+</div>
+</div>
+
 </body>
 
 </html>
-<img src='../Images/katsu_burger_image.jpg'>
