--- a/html/Chicken Kiev.html
+++ b/html/Chicken Kiev.html
@@ -2,12 +2,17 @@
 <html>
   <head>
         <title>Cooking For a  Group</title>
+        <link rel="stylesheet" type="text/css" href="../css/group-webproject.css">
+<link href= '../css/bootstrap.css' rel='stylesheet'>
+<meta name='viewpoint'content="width"=device-width, initial-scale=1.0>
   </head>
 
 <body>
 
     <h1>Chicken Kiev and Bacon Mash</h1>
-
+    <div class= "container">
+    <div class= "row">
+      <div class= col-xs-4>
     <h2>Ingredients:</h2>
     <ul>
      <li>6 Chicken Breasts</li>
@@ -19,7 +24,8 @@
      <li>Plain Flour</li>
      <li>2 Cloves Garlic</li>
     </ul>
-
+  </div>
+  <div class= col-xs-8>
     <h2>Method:</h2>
     <ol>
      <li>Add 150g Butter to a bowl, with a large handful of both chopped tarragon and parsley. Grate in 2 cloves of garlic. Season with salt and pepper. Mash together. Wrap your butter in cling film. Mould in to a cylinder shape, and then place in fridge for 30 minutes to firm up.</li>
@@ -33,8 +39,27 @@
      <li>Remove the breasts from the frying pan and add to a roasting tray. Plan in oven for 12-15 minutes until cooked through.</li>
      <li>Serve the chicken on a large spoonful of the bacony mash. Cut it open and enjoy!</li>
     </ol>
+  </div>
+  </div>
+
+  </div>
+  </div>
+
+  <div class="container">
+    <div class= row>
+      <div class="col-xs-2">
+      </div>
+  <div class="col-xs-8">
+    <a href="Butternut Squash Orzo.html">
+        <img src='../Images/kiev_image.jpg' class="img-responsive">
+
+    </a>
+  </div>
+  <div class="col-xs-2">
+  </div>
+  </div>
+  </div>
 
   </body>
 
   </html>
-  <img src='../Images/kiev_image.jpg'>
