--- a/html/Mushroom_mac_and_cheese.html
+++ b/html/Mushroom_mac_and_cheese.html
@@ -1,13 +1,22 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-<title> Healthy Recipies </title>
+
+<link rel="stylesheet" type="text/css" href="../css/group-webproject.css">
+<link href= '../css/bootstrap.css' rel='stylesheet'>
+<meta name='viewpoint'content="width"=device-width, initial-scale=1.0>
+
+<title> Budget Recipies </title>
 </head>
 
-<h1>Mushroom Mac ‘n’ Cheese, 42p</h1>
+<body>
+<h1>Mushroom Mac and Cheese, 42p</h1>
+<div class= "container">
+<div class= "row">
+  <div class= col-xs-4>
 
-<h2>Serves three people, or two particularly hungry ones, at 42p each</h2>
-<h3>Ingredients:</h3>
+<h2>Ingredients:</h2>
 <ul>
   <li>1 onion, 9p (90p/1.5kg, Sainsburys)</li>
   <li>1 tbsp sunflower oil, 3p (£3/3l)</li>
@@ -21,7 +30,9 @@
   <li>15g hard strong cheese, 18p (£2.30/200g, Sainsburys Basics)</li>
   <li>A slice of bread, 2p (40p/22 slice loaf, Sainsburys Basics)</li>
 </ul>
-<h4>Method:</h4>
+</div>
+<div class= col-xs-8>
+<h2>Method:</h2>
 <ol>
   <li>First peel and finely chop your onion and sling it in a saucepan with a slug of oil.</li>
   <li>Cook on a gentle heat for a few minutes to soften, season with salt, and sprinkle in the flour. Mix briskly so that the flour coats the onions.</li>
@@ -30,4 +41,25 @@
   <li>Remove the pan from the heat, and fold in the pasta. (Folding in is a cookery term that basically means ‘gently stir it without mooshing it about too much’.)</li>
   <li>Tip it into an ovenproof dish, making sure the pasta is pretty much covered in the sauce, add more cheese on top, and optional breadcrumbs if you like that kind of thing, and pop it in the oven at 180C for 45 minutes.</li>
 </ol>
-<img src='../Images/mushroom_mac_and_cheese.jpg'>
+</div>
+
+</div>
+</div>
+
+<div class="container">
+  <div class= row>
+    <div class="col-xs-2">
+    </div>
+<div class="col-xs-8">
+  <a href="Butternut Squash Orzo.html">
+    <img src="../Images/mushroom_mac_and_cheese.jpg" class="img-responsive">
+
+  </a>
+</div>
+<div class="col-xs-2">
+  </div
+</div>
+</div>
+
+</body>
+</html>
