--- a/html/Toad_in_the_hole.html
+++ b/html/Toad_in_the_hole.html
@@ -2,14 +2,21 @@
 <html>
 
 <head>
+
 <link rel="stylesheet" type="text/css" href="../css/group-webproject.css">
+<link href= '../css/bootstrap.css' rel='stylesheet'>
+<meta name='viewpoint'content="width"=device-width, initial-scale=1.0>
+
 <title> Budget Recipies </title>
 </head>
 
+<body>
 <h1>Toad In The Hole, 18p</h1>
+<div class= "container">
+<div class= "row">
+  <div class= col-xs-4>
 
-<h2>Serves 4-6 from 18p each.</h2>
-<h3>Ingredients:</h3>
+<h2>Ingredients:</h2>
 <ul>
   <li>25g butter or 2 tbsp cooking oil, 3p (£1.10/1l)</li>
   <li>400g sausages, 70p (£1.19/681g)</li>
@@ -18,7 +25,9 @@
   <li>1 egg, 15p (89p/6 free range)</li>
   <li>300ml milk, 17p (55p/1l)</li>
 </ul>
-<h4>Method</h4>
+</div>
+<div class= col-xs-8>
+<h2>Method</h2>
 <ol>
   <li>First grab a roasting dish, around 10 inches by 12 inches, or a deep round cake tin will do the same job.</li>
   <li>Pop the butter or oil, and sausages, into the tin. Cook at 200C for around 10 minutes, giving the tin a jostle halfway through to make sure they cook evenly.</li>
@@ -26,4 +35,24 @@
   <li>Pour in the rest of the milk and continue to beat until very smooth.</li>
   <li>Remove the roasting tin from the oven and pour the batter in. Move the sausages so they are roughly evenly distributed. Bake for 40 minutes until the batter is risen and golden. DO NOT OPEN THE OVEN DOOR until the 40 minutes are over else your batter will deflate!</li>
 </ol>
-<img src='../Images/Toad_in_the_hole.jpg'>
+</div>
+
+</div>
+</div>
+
+<div class="container">
+  <div class= row>
+    <div class="col-xs-2">
+    </div>
+<div class="col-xs-8">
+  <a href="Butternut Squash Orzo.html">
+    <img src="../Images/Toad_in_the_hole.jpg" class="img-responsive">
+
+  </a>
+</div>
+<div class="col-xs-2">
+  </div
+</div>
+</div>
+</body>
+</html>
