--- a/html/banana_waffles.html
+++ b/html/banana_waffles.html
@@ -1,10 +1,17 @@
 <!DOCTYPE html>
 <head>
 <title> Healthy Recipies </title>
+<link rel="stylesheet" type="text/css" href="../css/group-webproject.css">
+<link href= '../css/bootstrap.css' rel='stylesheet'>
+<meta name='viewpoint'content="width"=device-width, initial-scale=1.0>
 </head>
+
 <body>
 <h1> Banana Waffles </h1>
-<p2>
+<div class= "container">
+<div class= "row">
+  <div class= col-xs-4>
+
 <h2> Ingredients:</h2>
 <ul>
 <li>1 and 1/4 cups (156g) All Purpose Flour</li>
@@ -14,6 +21,8 @@
 <li>2 Ripe Bananas (~200g)</li>
 <li>1 Tbsp Coconut Oil</li>
 </ul>
+</div>
+<div class= col-xs-8>
 <h2> Method:</h2>
 <ol>
 <li>Put your waffle iron on to begin heating up.</li>
@@ -23,6 +32,26 @@
 <li>When your waffle iron is hot enough, pour out enough batter (usually around 1/3 cup per waffle) to cover the waffle iron on each side.</li>
 <li>Bake for around 8 minutes or until very golden brown and crispy.</li>
 </ol>
-</p2>
-</body>
-<img src='../Images/banana waffles image.jpg'>
+</div>
+</div>
+
+</div>
+</div>
+
+<div class="container">
+  <div class= row>
+    <div class="col-xs-2">
+    </div>
+<div class="col-xs-8">
+  <a href="Butternut Squash Orzo.html">
+    <img src='../Images/banana waffles image.jpg' class="img-responsive">
+
+  </a>
+</div>
+<div class="col-xs-2">
+</div>
+</div>
+</div>
+
+
+</div>
