--- a/html/green_tortilla.HTML
+++ b/html/green_tortilla.HTML
@@ -1,10 +1,15 @@
 <!DOCTYPE html>
 <head>
 <title> Healthy Recipies </title>
+<link rel="stylesheet" type="text/css" href="../css/group-webproject.css">
+<link href= '../css/bootstrap.css' rel='stylesheet'>
+<meta name='viewpoint'content="width"=device-width, initial-scale=1.0>
 </head>
 <body>
 <h1> Green Tortila </h1>
-<p1>
+<div class= "container">
+<div class= "row">
+  <div class= col-xs-4>
 <h2> Ingredients:</h2>
 <ul>
 <li> 4 tsp olive oil </li>
@@ -16,13 +21,33 @@
 <li>3 large eggs</li>
 <li>handful flat leaf parsley, finely chopped</li>
 </ul>
-
+</div>
+<div class= col-xs-8>
 <h2> Method:</h2>
 <ol>
 <li>Heat 2 tsp oil in a non-stick frying pan, about 15cm in diameter; fry the shallot for 10 minutes, until soft. Add the garlic and thyme, then the spinach, peas and a splash of water. Cook for 2-3 minutes, until the spinach is wilted and the peas are tender.</li>
 <li>Beat the eggs in a large bowl, then add the spinach and pea mixture, plus the parsley. Mix well and season. Wipe out the pan with kitchen paper and heat the remaining 2 tsp oil. When hot, add the egg mixture. Swirl the pan until the mixture starts to set around the edges, then reduce the heat and cook on a very low heat for 4-5 minutes, until it just starts to set, with the bottom and sides golden but the middle still quite loose.</li>
 <li>Cover the pan with a flat lid or board and carefully turn the tortilla onto it. (Don’t worry if it’s quite runny; it will come back together again.) Gently slide the tortilla back into the pan then put back on a low heat. Use a spatula to tuck the edges of the tortilla under to give it a curved look. Cook for 2-3 minutes over a medium-low heat, then turn onto a board and serve. It should still be a little soft and liquid in the middle. Enjoy with crusty bread and a tomato salad, if liked.</li>
 </ol>
-</p1>
+</div>
+
+</div>
+</div>
+
+<div class="container">
+  <div class= row>
+    <div class="col-xs-2">
+    </div>
+<div class="col-xs-8">
+  <a href="Butternut Squash Orzo.html">
+    <img src="../Images/green tortilla image.png" class="img-responsive">
+
+  </a>
+</div>
+<div class="col-xs-2">
+  </div
+</div>
+</div>
+
 </body>
-<img src='../Images/green tortilla image.png'>
+</html>
