--- a/html/Mushroom_mac_and_cheese.html
+++ b/html/Mushroom_mac_and_cheese.html
@@ -51,10 +51,9 @@
     <div class="col-xs-2">
     </div>
 <div class="col-xs-8">
-  <a href="Butternut Squash Orzo.html">
-    <img src="../Images/mushroom_mac_and_cheese.jpg" class="img-responsive">
 
-  </a>
+    <img class="center-block" src="../Images/mushroom_mac_and_cheese.jpg" class="img-responsive">
+
 </div>
 <div class="col-xs-2">
   </div
