--- a/html/banana_waffles.html
+++ b/html/banana_waffles.html
@@ -36,22 +36,20 @@
 </div>
 
 </div>
-</div>
 
 <div class="container">
   <div class= row>
     <div class="col-xs-2">
     </div>
 <div class="col-xs-8">
-  <a href="Butternut Squash Orzo.html">
-    <img src='../Images/banana waffles image.jpg' class="img-responsive">
+    <img class="center-block" src='../Images/banana waffles image.jpg' class="img-responsive">
 
-  </a>
+
 </div>
 <div class="col-xs-2">
 </div>
 </div>
 </div>
 
-
-</div>
+</body>
+</html>
