--- a/html/Barley_and_broccoli.html
+++ b/html/Barley_and_broccoli.html
@@ -42,10 +42,9 @@
     <div class="col-xs-2">
     </div>
 <div class="col-xs-8">
-  <a href="Butternut Squash Orzo.html">
-    <img src="../Images/barley-broccoli-risotto image.jpg" class="img-responsive">
 
-  </a>
+    <img class="center-block" src="../Images/barley-broccoli-risotto image.jpg" class="img-responsive">
+
 </div>
 <div class="col-xs-2">
 </div>
