--- a/html/green_tortilla.HTML
+++ b/html/green_tortilla.HTML
@@ -39,13 +39,11 @@
     <div class="col-xs-2">
     </div>
 <div class="col-xs-8">
-  <a href="Butternut Squash Orzo.html">
-    <img src="../Images/green tortilla image.png" class="img-responsive">
+    <img class="center-block" src="../Images/green tortilla image.png" class="img-responsive">
 
-  </a>
 </div>
 <div class="col-xs-2">
-  </div
+</div>
 </div>
 </div>
 
