--- a/html/homepage.html
+++ b/html/homepage.html
@@ -3,6 +3,7 @@
 <head>
   <link href='../css/bootstrap.css' rel='stylesheet'>
   <link href='../css/custom.css' rel='stylesheet'>
+  <link href='../css/homepage.css' rel='stylesheet'>
   <meta name="viewport" content="width"=device-width, initial-scale=1.0>
   <nav class="navbar navbar-default navbar-fixed-top">
   <div class="container-fluid">
@@ -46,6 +47,11 @@
         </div>
       </div>
       <div class="row">
+        <p>
+
+        </p>
+      </div>
+      <div class="row">
         <div class="col-xs-4">
           <a href="Chicken Kiev.html">
             <img src="../Images/kiev_image.jpg" class="img-responsive" >
@@ -62,6 +68,11 @@
           </a>
         </div>
       </div>
+      <div class="row">
+        <p>
+
+        </p>
+      </div>  
       <div class="row">
         <div class="col-xs-4">
           <a href="Toad_in_the_hole.html">
