css - image size

--- a/html/Butternut Sqush Orzo.html
+++ b/html/Butternut Sqush Orzo.html
@@ -2,9 +2,10 @@
 <html>
   <head>
         <title>Cooking For a  Group</title>
-        <link rel="stylesheet" type="text/css" href="../css/group-webproject.css">
-<link href= '../css/bootstrap.css' rel='stylesheet'>
+
 <meta name='viewpoint'content="width"=device-width, initial-scale=1.0>
+  <link rel="stylesheet" type="text/css" href="../css/group-webproject.css">
+<link href= '../css/bootstrap.css' rel='stylesheet'>
   </head>
 
   <body>
@@ -49,7 +50,7 @@
     </div>
 <div class="col-xs-8">
 
-    <img src="../Images/orzo_image.jpg" class="img-responsive">
+    <img src="../Images/orzo_image.jpg" class="img-responsive" class="img.center">
 </div>
 <div class="col-xs-2">
   </div
