--- a/html/Carrot_cumin_burger.html
+++ b/html/Carrot_cumin_burger.html
@@ -9,7 +9,7 @@
 
 <body>
 
-<h1>Carrot, Cumin & Kidney Bean Burgers</h1>
+<h1>Carrot, Cumin & Kidney Bean Burgers, 9p</h1>
 <div class= "container">
 <div class= "row">
   <div class= col-xs-4>
