--- a/html/about us.html
+++ b/html/about us.html
@@ -1,7 +1,28 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="stylesheet" href="../css/aboutus.css"
+    <link href='../css/bootstrap.css' rel='stylesheet'>
+    <link href='../css/aboutus.css' rel='stylesheet'>
+    <nav class="navbar navbar-default navbar-fixed-top">
+    <div class="container-fluid">
+      <div class="navbar-header">
+        <a class="navbar-brand" href="hompage.html">Student Recipies</a>
+      </div>
+      <ul class="nav navbar-nav">
+        <li class="active">
+        <li><a href="healthy_recipes.html">Healthy</a></li>
+        <li><a href="budget_recipes.html">Budget</a></li>
+        <li><a href="group_recipes.html">Group Meals</a></li>
+        <li><a href="about us.html">About Us</a></li>
+      </ul>
+      <form class="navbar-form navbar-right">
+       <div class="form-group">
+         <input type="text" class="form-control" placeholder="Search">
+       </div>
+       <button type="submit" class="btn btn-default">Submit</button>
+     </form>
+    </div>
+  </nav>
   </head>
 <header>
 <H1> About Us </h1>
