--- a/html/about us.html
+++ b/html/about us.html
@@ -3,6 +3,7 @@
   <head>
     <link href='../css/bootstrap.css' rel='stylesheet'>
     <link href='../css/aboutus.css' rel='stylesheet'>
+    <link href="../css/custom.css" rel="stylesheet">
     <nav class="navbar navbar-default navbar-fixed-top">
     <div class="container-fluid">
       <div class="navbar-header">
@@ -24,6 +25,7 @@
     </div>
   </nav>
   </head>
+
 <header>
 <H1> About Us </h1>
 </header>
