--- a/html/group_recipes.html
+++ b/html/group_recipes.html
@@ -2,7 +2,28 @@
 <html>
 <head>
   <link href='../css/bootstrap.css' rel='stylesheet'>
+  <link href="../css/custom.css" rel="stylesheet">
   <meta name="viewport" content="width"=device-width, initial-scale=1.0>
+  <nav class="navbar navbar-default navbar-fixed-top">
+  <div class="container-fluid">
+    <div class="navbar-header">
+      <a class="navbar-brand" href="hompage.html">Student Recipies</a>
+    </div>
+    <ul class="nav navbar-nav">
+      <li class="active">
+      <li><a href="healthy_recipes.html">Healthy</a></li>
+      <li><a href="budget_recipes.html">Budget</a></li>
+      <li><a href="group_recipes.html">Group Meals</a></li>
+      <li><a href="about us.html">About Us</a></li>
+    </ul>
+    <form class="navbar-form navbar-right">
+     <div class="form-group">
+       <input type="text" class="form-control" placeholder="Search">
+     </div>
+     <button type="submit" class="btn btn-default">Submit</button>
+   </form>
+  </div>
+</nav>
 </head>
 <body>
   <div class="container">
