--- a/html/homepage.html
+++ b/html/homepage.html
@@ -2,8 +2,8 @@
 <html>
 <head>
   <link href='../css/bootstrap.css' rel='stylesheet'>
+  <link href="../css/hompage.css" rel="stylesheet">
   <link href='../css/custom.css' rel='stylesheet'>
-  <link href='../css/homepage.css' rel='stylesheet'>
   <meta name="viewport" content="width"=device-width, initial-scale=1.0>
   <nav class="navbar navbar-default navbar-fixed-top">
   <div class="container-fluid">
