--- a/html/about us.html
+++ b/html/about us.html
@@ -7,7 +7,7 @@
     <nav class="navbar navbar-default navbar-fixed-top">
     <div class="container-fluid">
       <div class="navbar-header">
-        <a class="navbar-brand" href="hompage.html">Student Recipies</a>
+        <a class="navbar-brand" href="homepage.html">Student Recipies</a>
       </div>
       <ul class="nav navbar-nav">
         <li class="active">
