--- a/html/homepage.html
+++ b/html/homepage.html
@@ -8,7 +8,7 @@
   <nav class="navbar navbar-default navbar-fixed-top">
   <div class="container-fluid">
     <div class="navbar-header">
-      <a class="navbar-brand" href="hompage.html">Student Recipies</a>
+      <a class="navbar-brand" href="homepage.html">Student Recipies</a>
     </div>
     <ul class="nav navbar-nav">
       <li class="active">
@@ -62,7 +62,7 @@
           </a>
         </div>
         <div class="col-xs-4">
-          <a href="Butternut Squash Orzo.html">
+          <a href="Butternut Sqush Orzo.html">
             <img src="../Images/orzo_image.jpg" class="img-responsive">
           </a>
         </div>
