--- a/html/Barley_and_broccoli.html
+++ b/html/Barley_and_broccoli.html
@@ -1,54 +1,56 @@
 <!DOCTYPE html>
+<html>
 <head>
-<title> Healthy Recipies </title>
-<link rel="stylesheet" type="text/css" href="../css/group-webproject.css">
-<link href= '../css/bootstrap.css' rel='stylesheet'>
-<meta name='viewpoint'content="width"=device-width, initial-scale=1.0>
+  <title> Healthy Recipies </title>
+    <link rel="stylesheet" type="text/css" href="../css/group-webproject.css">
+    <link href= '../css/bootstrap.css' rel='stylesheet'>
+    <meta name='viewpoint'content="width"=device-width, initial-scale=1.0>
 </head>
+
 <body>
-<h1> Barley and Broccoli Risotto </h1>
-<div class= "container">
-<div class= "row">
-  <div class= col-xs-4>
-  <ul>
-<h2> Ingredients:</h2>
-<li>100g wholegrain pearl barley</li>
-<li>2 tsp reduced-salt vegetable bouillon powder</li>
-<li>2 tbsp rapeseed oil</li>
-<li>1 large leek chopped</li>
-<li>2 garlic cloves</li>
-<li>2/3 pack basil</li>
-<li>generous squeeze of lemon juice</li>
-<li>125g Tenderstem broccoli</li>
-</ul>
-</div>
-<div class= col-xs-8>
-<h2> Method:</h2>
-<ol>
-</li>Pour a litre of cold water over the barley, cover and leave to soak overnight.
-</li>The next day, drain the barley, reserve the liquid and use it to make 500ml vegetable bouillon. Heat half the oil in a non-stick pan, add the leek and cook briefly to soften. Tip half into a bowl, then add the barley and bouillon to the pan, cover and simmer for 20 mins.</li>
-</li>Meanwhile, add the garlic, basil, remaining oil, the lemon juice and 3 tbsp water to the leeks in the bowl, and blitz to a paste with a stick blender. </li>
-</li>When the barley has cooked for 20 mins, add the broccoli to the pan and cook for 5-10 mins more until both are tender. Stir in the basil purée, heat very briefly (to retain the fragrance), then spoon into bowls to serve.</li>
-</ol>
+  <h1> Barley and Broccoli Risotto </h1>
+    <div class= "container">
+      <div class= "row">
+        <div class= col-xs-4>
+          <ul>
+            <h2> Ingredients:</h2>
+            <li>100g wholegrain pearl barley</li>
+            <li>2 tsp reduced-salt vegetable bouillon powder</li>
+            <li>2 tbsp rapeseed oil</li>
+            <li>1 large leek chopped</li>
+            <li>2 garlic cloves</li>
+            <li>2/3 pack basil</li>
+            <li>generous squeeze of lemon juice</li>
+            <li>125g Tenderstem broccoli</li>
+          </ul>
+        </div>
+          <div class= col-xs-8>
+            <h2> Method:</h2>
+            <ol>
+              </li>Pour a litre of cold water over the barley, cover and leave to soak overnight.
+              </li>The next day, drain the barley, reserve the liquid and use it to make 500ml vegetable bouillon. Heat half the oil in a non-stick pan, add the leek and cook briefly to soften. Tip half into a bowl, then add the barley and bouillon to the pan, cover and simmer for 20 mins.</li>
+              </li>Meanwhile, add the garlic, basil, remaining oil, the lemon juice and 3 tbsp water to the leeks in the bowl, and blitz to a paste with a stick blender. </li>
+              </li>When the barley has cooked for 20 mins, add the broccoli to the pan and cook for 5-10 mins more until both are tender. Stir in the basil purée, heat very briefly (to retain the fragrance), then spoon into bowls to serve.</li>
+            </ol>
 
-</div>
-</div>
+          </div>
+        </div>
 
-</div>
-</div>
+      </div>
 
 <div class="container">
   <div class= row>
     <div class="col-xs-2">
     </div>
-<div class="col-xs-8">
+      <div class="col-xs-8">
 
     <img class="center-block" src="../Images/barley-broccoli-risotto image.jpg" class="img-responsive">
 
-</div>
-<div class="col-xs-2">
-</div>
-</div>
+      </div>
+        <div class="col-xs-2">
+        </div>
+      </div>
 </div>
 
 </body>
+</html>
